--- a/frontend/attryb/src/App.css
+++ b/frontend/attryb/src/App.css
@@ -9,3 +9,70 @@
   font-size: 20px;
   padding: 20px 0 20px 0;
 }
+
+form {
+  width: 60%;
+  margin: auto;border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  padding: 20px;
+}
+
+input {
+  width: 80%;
+  height: 30px;
+  font-size: large;
+}
+
+.sub {
+  width: 80%;
+  height: 40px;
+  cursor: pointer;
+  font-size: large;
+  margin-top: 15px;
+  background-color: green;
+  border: 0px;
+  color: white;
+}
+
+label {
+  font-size: 20px;
+  color: red;
+}
+
+.main-box {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 15px;
+  padding: 15px;
+}
+
+.data-box {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 15px;
+  padding: 5px;
+}
+
+.del {
+  width: 30%;
+  height: 27px;
+  background-color: rgb(219, 105, 105);
+  border: 0px;
+  color: white;
+  font-size: medium;
+  cursor: pointer;
+  margin-left: 5px;
+}
+
+.edit {
+  width: 30%;
+  height: 27px;
+  background-color: rgb(207, 207, 61);
+  border: 0px;
+  color: white;
+  font-size: medium;
+  cursor: pointer;
+}
+
+img {
+  width: 100%;
+}
