--- a/frontend/attryb/src/App.css
+++ b/frontend/attryb/src/App.css
@@ -15,6 +15,7 @@ form {
   margin: auto;border-radius: 15px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   padding: 20px;
+  background-color: rgb(216, 216, 6);
 }
 
 input {
@@ -50,6 +51,18 @@ label {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 15px;
   padding: 5px;
+  background-color: rgb(216, 216, 6);
+}
+
+.car-color {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.car-color>div {
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
 }
 
 .del {
