--- a/frontend/attryb/src/App.css
+++ b/frontend/attryb/src/App.css
@@ -12,7 +12,8 @@
 
 form {
   width: 60%;
-  margin: auto;border-radius: 15px;
+  margin: auto;
+  border-radius: 15px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   padding: 20px;
   background-color: rgb(216, 216, 6);
@@ -21,6 +22,12 @@ form {
 input {
   width: 80%;
   height: 30px;
+  font-size: large;
+}
+
+.role-box {
+  width: 80%;
+  text-align: center;
   font-size: large;
 }
 
